--- a/Express/views/user-profile.pug
+++ b/Express/views/user-profile.pug
@@ -1,6 +1,7 @@
 html
     head
+        link(rel="stylesheet", href="public/index.css")
     body
         h1 User Profile Page 
-        h2 Nickname 
-        div= nickname
+        h2.gold  Nickname 
+        div.green.big= nickname
