--- a/Express/views/user-profile.pug
+++ b/Express/views/user-profile.pug
@@ -7,6 +7,7 @@ html
         div.green.big= nickname
 
         h2 Profile 
+        img(src=profileImageURL).profileImage
         form(action=`/user/${userId}/profile` method="post" enctype="multipart/form-data")
             input(type="file" name = "profile")
             button Upload Profile Picture 
