--- a/Express/views/user-profile.pug
+++ b/Express/views/user-profile.pug
@@ -11,3 +11,5 @@ html
         form(action=`/user/${userId}/profile` method="post" enctype="multipart/form-data")
             input(type="file" name = "profile")
             button Upload Profile Picture 
+
+        a(href="/users") Back to users
